--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -1,9 +1,9 @@
 
 <div class="container-fluid w-80 row1">
   <div class="row">
-    <div class="col-md-6 mx-auto" style="margin-top: 10%;">
+    <div class="col-md-6 mx-auto" style="margin-top: 5%;">
       <p>
-        O <b>INAPEM</b> é o órgão da administração indirecta do Estado Angolano, criado ao abrigo da Lei nº 251/18 de
+        O <span>INAPEM</span> é o órgão da administração indirecta do Estado Angolano, criado ao abrigo da Lei nº 251/18 de
         12 de Novembro, como uma entidade de direito público,
         dotada de personalidade jurídica, capacidades de autonomia administrativa e financeira, cuja finalidade é
         advogar o empreendedorismo, bem como, proceder o acompanhamento do desenvolvimento do empresariado nacional.
@@ -36,25 +36,25 @@
 
 
 
-<div class="container">
+<div class="container presidente">
 <div class="row mt-5">
   <div class="col-md-4 offset-md-4">
-    <h1 class="text-center"><b>Nossa Equipa</b></h1>
+    <p class="titulo text-center" style="margin-bottom: 10%; margin-top: 10%;"><b>Nossa Equipa</b></p>
 
-    <div class="image-container">
+    <div class="image-container d-flex justify-content-center">
       <img src="assets/img/sobre/Pfoto1.png" alt="Imagem" style="max-width: 100%;">
     </div>
 
     <div class="mx-auto">
-      <p class="text-center" style="font-size: 26px;"><b>João Muinguilo Lunda Nkosi</b></p>
-      <p class="text-center">Presidente do Conselho de Administração do INAPEM</p>
+      <p class="nome text-center" style="margin-top: 6%;"><b>João Muinguilo Lunda Nkosi</b></p>
+      <p class="funcao text-center">Presidente do Conselho de Administração do INAPEM</p>
     </div>
   </div>
 </div>
 </div>
 
 
-<h1 class="text-center" style="margin-top: 2%; margin-bottom: 2%; text-decoration: underline; ">
+<h1 class="aexecutivos text-center" style="margin-top: 5%; margin-bottom: 5%; text-decoration: underline; ">
 ADMINISTRADORES EXECUTIVOS
 </h1>
 
@@ -66,43 +66,42 @@ ADMINISTRADORES EXECUTIVOS
       <img src="assets/img/sobre/braulio.png" alt="Imagem" style="max-width: 100%;">
     </div>
     <p class="text-center"><b><h2>Braulio Augusto</h2></b></p>
-    <p class="text-center">Administrador</p>
+    <p class="funcao text-center">Administrador</p>
   </div>
   <div class="col-md-2">
     <div class="image-container">
       <img src="assets/img/sobre/sheila.png" alt="Imagem" style="max-width: 100%;">
     </div>
     <p class="text-center"><b><h2>Sheila Bandeiara</h2></b></p>
-    <p class="text-center">Administradora</p>
+    <p class="funcao text-center">Administradora</p>
   </div>
   <div class="col-md-2">
     <div class="image-container">
       <img src="assets/img/sobre/osvaldo.png" alt="Imagem" style="max-width: 100%;">
     </div>
     <p class="text-center"><b><h2>Osvaldo Rasgado</h2></b></p>
-    <p class="text-center">Administrador</p>
+    <p class="funcao text-center">Administrador</p>
   </div>
   <div class="col-md-2">
     <div class="image-container">
       <img src="assets/img/sobre/samora.png" alt="Imagem" style="max-width: 100%;">
     </div>
     <p class="text-center"><b><h2>Samara Kitumba</h2></b></p>
-    <p class="text-center">Administrador</p>
+    <p class="funcao text-center">Administrador</p>
   </div>
 </div>
 </div>
 
-<h1 class="text-center" style="margin-top: 2%; margin-bottom: 2%;">
+<h1 class="text-center nossos" style="margin-top: 5%; margin-bottom: 5%;">
 Nossos Parceiros
 </h1>
 
 <div class="conteiner inst">
 <div class="container">
 <div class="row">
-  <div class="v-line"></div>
-  <h2>
+  <p class="titulo">
     Instituições Públicas
-  </h2>
+  </p>
 </div>
 <div class="row">
   <div class="image-container">
@@ -113,10 +112,9 @@ Nossos Parceiros
 
 <div class="container">
 <div class="row">
-  <div class="v-line"></div>
-  <h2>
+  <p class="titulo">
     Instituições Financeiras
-  </h2>
+  </p>
 </div>
 <div class="row">
   <div class="image-container">
@@ -127,10 +125,9 @@ Nossos Parceiros
 
 <div class="container">
 <div class="row">
-  <div class="v-line"></div>
-  <h2>
+  <p class="titulo">
     Instituições Congêneres
-  </h2>
+  </p>
 </div>
 <div class="row">
   <div class="image-container">
@@ -142,10 +139,9 @@ Nossos Parceiros
 
 <div class="container">
 <div class="row">
-  <div class="v-line"></div>
-  <h2>
+  <p class="titulo">
     Instituições Privadas
-  </h2>
+  </p>
 </div>
 <div class="row">
   <div class="image-container">
@@ -157,10 +153,9 @@ Nossos Parceiros
 
 <div class="container">
 <div class="row">
-  <div class="v-line"></div>
-  <h2>
+  <p class="titulo">
     Feitos em Angola
-  </h2>
+  </p>
 </div>
 <div class="row">
   <div class="image-container">
@@ -171,10 +166,9 @@ Nossos Parceiros
 
 <div class="container">
 <div class="row">
-  <div class="v-line"></div>
-  <h2>
+  <p class="titulo">
     Instituições internacionais
-  </h2>
+  </p>
 </div>
 <div class="row">
   <div class="image-container">
