--- a/src/app/sobre/sobre.component.less
+++ b/src/app/sobre/sobre.component.less
@@ -5,19 +5,34 @@
   background-color:whitesmoke;
 }
 
-.row img{
+.row1 img{
   height: auto;
+  width: 460px;
+height: 758px;
+}
+
+.row1 p{
+  color: #000;
+  font-family: Roboto;
+  font-size: 19px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28.5px; /* 150% */
+  letter-spacing: -0.19px;
+}
+
+.row p span{
+  color: #000;
+font-family: Roboto;
+font-size: 19px;
+font-style: normal;
+font-weight: 600;
+line-height: 28.5px;
+letter-spacing: -0.19px;
 }
 
 .row1{
   font-size: 20px;
-}
-
-.adm img
-{
-  width: 400px;
-  height: 412px;
-  margin-right: 40px;
 }
 
 .v-line{
@@ -31,4 +46,113 @@
 {
   margin-bottom: 5%;
   margin-top: 5%;
+}
+
+.presidente .titulo
+{
+  color: #000;
+font-family: Roboto;
+font-size: 45px;
+font-style: normal;
+font-weight: 800;
+line-height: 14px; /* 31.111% */
+letter-spacing: -0.675px;
+}
+
+.presidente img{
+  width: 287px;
+height: 351px;
+flex-shrink: 0;
+}
+
+.presidente .nome{
+  color: #000;
+font-family: Poppins;
+font-size: 24px;
+font-style: normal;
+font-weight: 600;
+line-height: 14px; /* 58.333% */
+letter-spacing: -0.36px;
+}
+
+.presidente .fucao{
+  color: #868585;
+font-family: Poppins;
+font-size: 18px;
+font-style: normal;
+font-weight: 500;
+line-height: 14px; /* 77.778% */
+letter-spacing: -0.27px;
+}
+
+.aexecutivos{
+  color: #000;
+font-family: Roboto;
+font-size: 36px;
+font-style: normal;
+font-weight: 700;
+line-height: 28.5px; /* 79.167% */
+letter-spacing: -0.19px;
+}
+
+.adm img{
+  width: 287px;
+height: 351px;
+flex-shrink: 0;
+}
+
+.adm p{
+  color: #868585;
+font-family: Poppins;
+font-size: 18px;
+font-style: normal;
+font-weight: 500;
+line-height: 14px; /* 77.778% */
+letter-spacing: -0.27px;
+}
+
+.adm p b{
+  color: #000;
+  font-family: Poppins;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 14px; /* 58.333% */
+  letter-spacing: -0.36px;
+}
+
+.adm .row{
+  display: inline-flex;
+align-items: flex-start;
+gap: 50px;
+}
+.nossos{
+  color: #000;
+font-family: Roboto;
+font-size: 45px;
+font-style: normal;
+font-weight: 800;
+line-height: 14px; /* 31.111% */
+letter-spacing: -0.675px;
+}
+
+.adm .funcao
+{
+  color: #868585;
+  font-family: Poppins;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 14px; /* 77.778% */
+  letter-spacing: -0.27px;
+
+}
+
+.inst .titulo{
+  border-left: 2px solid #F37000;
+  display: flex;
+height: 42px;
+padding: 10px;
+align-items: center;
+gap: 10px;
 }
